--- a/css/styles.css
+++ b/css/styles.css
@@ -1,17 +1,12 @@
 @charset "utf-8";
-@import url();
-
+ 
 
 /*共通部分
 -----------------*/
 html {
     font-size: 100%;
 }
-body{
-    font-family:'Roboto', sans-serif;
-    line-height:1.7;
-    color:#432;
-}
+body
 a {
     text-decoration: none;
 }
@@ -19,15 +14,31 @@ img {
     max-width: 100%;
 }
 
+.darumadrop-one-regular {
+    font-family: "Darumadrop One", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+  }
+  
+/*レイアウト*/
+.align-center {
+    text-align: center;
+}
 /*見出し*/
+
+.h1 {
+    font-size: 2.5rem;
+    font-weight: bold;
+    color: #333;
+    font-family: "Darumadrop One",sans-serif;   
+}
 .font-english {
-    font-family: 'Roboto', sans-serif;
     font-weight: normal;
 }
 /*ヘッダー
 -------------*/
 h2 {
-    font-family:'Roboto', sans-serif;
+    font-family: "Darumadrop One",sans-serif;
 }
 .page-header {
     padding-top: .5rem;
@@ -37,7 +48,12 @@ h2 {
 }
 .main-nav {
     display: flex;
+    justify-content: center;
     gap: 2.5rem;
     font-size: 1.5rem;
     list-style: none;
 }
+
+
+
+
