--- a/css/styles.css
+++ b/css/styles.css
@@ -53,7 +53,30 @@ h2 {
     font-size: 1.5rem;
     list-style: none;
 }
+/*フッターーーーー*/
+.footer {
+    margin: 0;
+    padding: 0;
+    font-family: "Darumadrop One", sans-serif;
+}
+.footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: #333;
+    color: white;
+    text-align: center;
+    padding: 30px 0;
+    font-size: 2.0rem;
+}
 
-
-
-
+/*画像を丸くさせる*/
+.link-image img {
+    width: 300px; 
+    height: auto; 
+    transition: border-radius 0.3s ease; 
+}
+.link-image img:hover {
+    border-radius: 100%; 
+}
