--- a/css/styles.css
+++ b/css/styles.css
@@ -270,6 +270,9 @@ button:hover {
 */
 
 /*画像を丸くさせる*/
+.eo {
+    background-color: #F5DEB3;
+}
 .link-image img {
     width: 500px; 
     height: auto; 
@@ -290,7 +293,6 @@ button:hover {
 .content {
     text-align: center; /* テキストを中央に揃える */
     padding: 20px;
-    background-color: #f0f0f0;
     border-radius: 10px;
 }
 
