--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,8 @@
 body, html {
     margin: 0;
     padding: 0;
-    height: 100%;
+    height: 100vh;
+    background-color: #f8e9e9;
 }
 html {
     font-size: 100%;
@@ -40,6 +41,11 @@ img {
     display: flex;
     align-items: center;
     gap: 20px; /* 写真とテキストの間隔 */
+
+    padding: 20px;
+    background-color: #f4f4f4;
+    color: #333;
+
 }
 
 .content img {
@@ -66,5 +72,48 @@ img {
 
 /*-両端の空白-*/
 .container {
-    padding: 0 20px; /* 左右に20pxの空白を追加 */
+    padding: 0 40px; /* 左右に20pxの空白を追加 */
+}
+
+.hero {
+    position: relative;
+    width: 100%;
+    height: 100vh; /* 画面全体をカバー */
+    background-image: url('images/db6cda32-e5eb-47fc-933b-e7c54f1eaebc.jpg'); /* 背景画像のパス */
+    background-size: cover; /* 画像を縦横比を維持しつつ全体をカバー */
+    background-position: center; /* 画像を中央に配置 */
+    background-repeat: no-repeat; /* 繰り返しを防止 */
+    display: flex;
+    flex-direction: column;
+    justify-content: center; /* 垂直方向に中央揃え */
+    align-items: center; /* 水平方向に中央揃え */
+    color: white; /* テキスト色を白に設定 */
+    text-shadow: 0 2px 4px rgba(0, 0, 0, 0.5); /* テキストに影をつける */
+}
+
+
+/*-写真配置-*/
+.photo-grid {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr); /* 横4列 */
+     /*grid-template-rows: repeat(3, 1fr); /* 縦3列 */
+    gap: 10px; /* 写真間の間隔 */
+    width: 100%; /* 全体の幅 */
+    height: 100%;
+    /*max-width: 800px; /* 最大幅 */
+    /*margin: 20px auto; /* 中央寄せ */
+    border-radius: 15px; /* 角を丸める */
+    padding: 10px; /* 両端の空白をgapと揃える */
+    box-sizing: border-box; /* パディングを含めた幅計算 */
+    /*overflow: hidden; /* 丸い角から画像がはみ出ないように */
+    /*background-color: #ffffff; /* 背景を白に */
+    
+}
+
+.photo-grid img {
+    width: 100%; /* 各画像の幅をグリッドに合わせる */
+    /*height: 100%; /* アスペクト比を維持 */
+    aspect-ratio: 1 / 1; /* 正方形の写真を維持 */
+    object-fit: cover; /* 画像が収まるようにトリミング */
+    border-radius: 10px; /* 各画像を丸くする */
 }
